--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
+            background-attachment: fixed;
         }
         main {
             background-color: white;
@@ -26,6 +28,18 @@
 <body>
     <main>
        <h1>Teste de Imagem</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, itaque? Voluptatem quia, soluta, facilis asperiores placeat incidunt quidem, earum reprehenderit impedit minima aliquam corporis distinctio rerum dolores fuga labore corrupti!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. At enim ut nostrum nemo dolor maxime aliquam reprehenderit optio deleniti aliquid, ipsa perspiciatis repellendus esse aspernatur, harum, molestias consectetur illum officiis.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eligendi perspiciatis assumenda esse doloribus, culpa fuga delectus modi debitis, consequatur sed maxime corporis quos magni sapiente dolor! Quo, eveniet! Illo.
+        </p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, itaque? Voluptatem quia, soluta, facilis asperiores placeat incidunt quidem, earum reprehenderit impedit minima aliquam corporis distinctio rerum dolores fuga labore corrupti!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. At enim ut nostrum nemo dolor maxime aliquam reprehenderit optio deleniti aliquid, ipsa perspiciatis repellendus esse aspernatur, harum, molestias consectetur illum officiis.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eligendi perspiciatis assumenda esse doloribus, culpa fuga delectus modi debitis, consequatur sed maxime corporis quos magni sapiente dolor! Quo, eveniet! Illo.
+        </p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, itaque? Voluptatem quia, soluta, facilis asperiores placeat incidunt quidem, earum reprehenderit impedit minima aliquam corporis distinctio rerum dolores fuga labore corrupti!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. At enim ut nostrum nemo dolor maxime aliquam reprehenderit optio deleniti aliquid, ipsa perspiciatis repellendus esse aspernatur, harum, molestias consectetur illum officiis.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eligendi perspiciatis assumenda esse doloribus, culpa fuga delectus modi debitis, consequatur sed maxime corporis quos magni sapiente dolor! Quo, eveniet! Illo.
+        </p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, itaque? Voluptatem quia, soluta, facilis asperiores placeat incidunt quidem, earum reprehenderit impedit minima aliquam corporis distinctio rerum dolores fuga labore corrupti!
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. At enim ut nostrum nemo dolor maxime aliquam reprehenderit optio deleniti aliquid, ipsa perspiciatis repellendus esse aspernatur, harum, molestias consectetur illum officiis.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eligendi perspiciatis assumenda esse doloribus, culpa fuga delectus modi debitis, consequatur sed maxime corporis quos magni sapiente dolor! Quo, eveniet! Illo.
