Atualizei meu desafio

--- a/desafios/meu-desafio/index.html
+++ b/desafios/meu-desafio/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo/style.css">
     <title>A pequena sereia</title>
 </head>
 <body>
     <header>
         <h1>A pequena sereia</h1>
             <p>
-                Por <a href="https://www.historiaparadormir.com.br/a-pequena-sereia/">Uma história para dormir</a>
+                Por <a href="https://www.historiaparadormir.com.br/a-pequena-sereia/" target="_blank">Uma história para dormir</a>
             </p>
     </header>
 
 
-        <section class="imagem" id="img01">
+        <section class="normal">
             <p>
                 Era o dia de concerto no reino  <br>
                 do rei Tritão, no fundo do mar.  <br>
@@ -33,7 +34,7 @@
             </p>
         </section>
 
-        <section class="normal">
+        <section class="imagem" id="img01">
             <p>
                 A música começou e as sereias  <br>
                 começaram a cantar uma melodia  <br>
@@ -64,7 +65,7 @@
             </p>
         </section>
 
-        <section class="imagem" id="img02">
+        <section class="normal">
             <p>
                 Ariel puxou então o linguado,  <br>
                 fazendo-o passar por um pequeno  <br>
@@ -92,7 +93,7 @@
             </p>
         </section>
 
-        <section class="normal">
+        <section class="imagem" id="img02">
             <p>
                 Ariel regressava a casa quando,  <br>
                 pelo caminho se lembrou do concerto: <br>
@@ -127,7 +128,7 @@
             </p>
         </section>
             
-        <section class="imagem" id="img03">
+        <section class="normal">
             <p>
                 Ariel ao dar-se conta que o príncipe <br>
                 se afundava, nadou até ele para o salvar. <br>
@@ -161,7 +162,7 @@
             </p>
         </section>
 
-        <section class="normal">
+        <section class="imagem" id="img03">
             <p>
                 Ariel queria tanto ter pernas para ir <br>
                 ter com o príncipe por quem se apaixonara  <br>
@@ -188,7 +189,7 @@
             </p>
         </section>
 
-        <section class="imagem" id="img04">
+        <section class="normal">
             <p>
                 Entretanto no fundo do oceano,  <br>
                 o rei Tritão estava preocupado  <br>
@@ -218,7 +219,7 @@
             </p>
         </section>
 
-        <section class="normal">
+        <section class="imagem" id="img04">
             <p>
                 Ao ver Eric, ela chamou por ele: <br>
                 – Eric! <br>
@@ -227,7 +228,12 @@
                 Ariel e Eric estavam prestes a  <br>
                 beijar-se quando Úrsula se transformou  <br>
                 num monstro marinho e arrastou  <br>
-                Ariel para si. <br>
+                Ariel para si.
+            </p>
+        </section>    
+
+        <section class="normal">
+            <p>
                 A noite caiu e as pernas de Ariel  <br>
                 voltaram a ser cauda de sereia. <br>
                 O rei Tritão apareceu e Úrsula falou-lhe  <br>
@@ -251,7 +257,7 @@
             </p>
         </section>
     <footer>
-        <p>Site criado por <a href="https://karinalivramento.github.io" target="_blank">Karina Livramento</a></p>
+        <p>Site criado por <a href="https://github.com/KarinaLivramento" target="_blank">Karina Livramento</a></p>
     </footer>    
 
 </body>
