--- a/exercicios/ex024/iframe03.html
+++ b/exercicios/ex024/iframe03.html
@@ -10,8 +10,8 @@
         }
         iframe{
             width: 95vw;
+            height: 270px;
             border: 2px solid black;
-        }
     </style>
 </head>
 <body>
@@ -25,7 +25,10 @@
     </ul>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, est blanditiis. Voluptatum incidunt consectetur temporibus, excepturi vel fugit facere delectus pariatur fugiat, provident quasi dolores eveniet deserunt hic dolorem repellat.</p>
-    <iframe id="tela" name="frame" src="">
+    
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam vel, ratione quia sed similique minus eius praesentium iste commodi tempora sunt libero hic maiores. Minima hic ullam ut quam nihil!</p>
+        <img src='imagens/logomarca.png' alt='logomarca'  width='200' height=100>">
         <p>Infelismente seu navegador não é compativél com isso.</p>
     </iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat omnis magni officia ab explicabo? Accusantium vitae a eligendi aliquid fuga officia eum, optio eveniet aspernatur, praesentium id, voluptas in explicabo! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum accusantium similique quia expedita possimus rem pariatur esse, obcaecati aliquam voluptatibus id adipisci aut ad quae nobis explicabo reiciendis quo voluptatum.</p>
