--- a/exercicios/ex025/form005.html
+++ b/exercicios/ex025/form005.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
-    <form action="cadastro.php" method="get" autocomplete="on"></form>
+    <form action="cadastro.php" method="post" autocomplete="on">
     <fieldset>
         <legend>Sexo</legend>
         <input type="radio" name="sexo" id="isxmas" value="M">
@@ -26,9 +26,10 @@
         <input type="checkbox" name="esten" id="iesten">
         <label for="iesten">Tênis</label><fieldset></fieldset>
     </fieldset>
-    <p>
+        <p>
         <input type="submit" value="Enviar">
         <input type="reset" value="Limpar">
-    </p>
+        </p>
+    </form>
 </body>
 </html>
