--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -7,18 +7,19 @@
 </head>
 <body>
     <h1>Teste de formulário</h1>
-    <form action="cadastro.php" method="post"></form>
+    <form action="cadastro.php" method="post">
         <p>
             <label for="isu">Usuário</label>
             <input type="text" name="usu" id="iusu" required minlength="5" maxlength="30" size="10" placeholder="nome de usuário" autocomplete="username">
         </p>
         <p>
             <label for="isen">Senha</label>
-            <input type="text" name="sen" id="isen" required minlength="20" size="8" placeholder="mínimo 8 letras" autocomplete="current-password">
+            <input type="text" name="sen" id="isen" required minlength="6" size="6" placeholder="mínimo 6 letras" autocomplete="current-password">
         </p>
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
+    </form>
 </body>
 </html>
