--- a/exercicios/ex025/form004.html
+++ b/exercicios/ex025/form004.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Exemplo de formulário</h1>
-    <form action="cadastro.php" method="get" autocomplete="on"></form>
+    <form action="cadastro.php" method="post" autocomplete="on">
     <fieldset>
         <legend>Dados Pessoais</legend>
         <p>
@@ -20,7 +20,7 @@
         </p>
         <p>
             <label for="itel">Telefone</label>
-            <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^\(\d{2}\)\d{4,5}-\d{4}$" required placeholder="(xx) xxxx-xxxx">
+            <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^\(\d{4}\)\d{3,3,3}-\d{3}$" required placeholder="(xxx)xxx-xxx-xxx">
         </p>
     </fieldset>
 
@@ -29,5 +29,6 @@
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
+    </form>
 </body>
 </html>
